弾を発射できるようになった

--- a/3DPG.vcxproj
+++ b/3DPG.vcxproj
@@ -182,6 +182,7 @@
   <ItemGroup>
     <ClInclude Include="DeviceResources.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Game\Bullets\Bullets.h" />
     <ClInclude Include="Game\CommonResources.h" />
     <ClInclude Include="Game\Player\Player.h" />
     <ClInclude Include="Game\Scene\IScene.h" />
@@ -202,6 +203,7 @@
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Game\Bullets\Bullets.cpp" />
     <ClCompile Include="Game\CommonResources.cpp" />
     <ClCompile Include="Game\Player\Player.cpp" />
     <ClCompile Include="Game\Scene\PlayScene.cpp" />
