グリッドフロアの周りを周回するようになった

--- a/3DPG.vcxproj
+++ b/3DPG.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="Libraries\MyLib\GridFloor.h" />
     <ClInclude Include="Libraries\MyLib\InputManager.h" />
     <ClInclude Include="Libraries\MyLib\MemoryLeakDetector.h" />
+    <ClInclude Include="Libraries\MyLib\UtilityMath.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="StepTimer.h" />
   </ItemGroup>
